refactor: :recycle: refactoring StatsList