@@ -1,7 +1,14 @@
 package com.poolplatform.features.user.adapters.mappers;
 
+import java.util.stream.Collectors;
+
+import com.poolplatform.features.answer.adapters.entities.AnswerEntity;
+import com.poolplatform.features.answer.domain.models.Answer;
+import com.poolplatform.features.survey.adapters.entities.SurveyEntity;
+import com.poolplatform.features.survey.domain.models.Survey;
 import com.poolplatform.features.user.adapters.entities.UserEntity;
 import com.poolplatform.features.user.domain.models.User;
+import com.poolplatform.features.user.domain.models.UserSummary;
 import com.poolplatform.features.visit.adapters.entities.VisitEntity;
 import com.poolplatform.features.visit.domain.models.Visit;
 
@@ -19,7 +26,25 @@ public class UserMapper {
                 visit.setId(v.getId());
 
                 return visit;
-            }).toList());
+            }).collect(Collectors.toList()));
+        }
+
+        if (userEntity.getAnswers() != null) {
+            user.setAnswers(userEntity.getAnswers().stream().map(a -> {
+                Answer answer = new Answer();
+                answer.setId(a.getId());
+
+                return answer;
+            }).collect(Collectors.toList()));
+        }
+
+        if (userEntity.getSurveys() != null) {
+            user.setSurveys(userEntity.getSurveys().stream().map(s -> {
+                Survey survey = new Survey();
+                survey.setId(s.getId());
+
+                return survey;
+            }).collect(Collectors.toList()));
         }
 
         return user;
@@ -38,9 +63,39 @@ public class UserMapper {
                 visit.setId(v.getId());
 
                 return visit;
-            }).toList());
+            }).collect(Collectors.toList()));
+        }
+
+        if (user.getAnswers() != null) {
+            userEntity.setAnswers(user.getAnswers().stream().map(a -> {
+                AnswerEntity answer = new AnswerEntity();
+                answer.setId(a.getId());
+
+                return answer;
+            }).collect(Collectors.toList()));
+        }
+
+        if (user.getSurveys() != null) {
+            userEntity.setSurveys(user.getSurveys().stream().map(s -> {
+                SurveyEntity survey = new SurveyEntity();
+                survey.setId(s.getId());
+
+                return survey;
+            }).collect(Collectors.toList()));
         }
 
         return userEntity;
+    }
+
+    public static UserSummary toUserSummary(User user) {
+        UserSummary userSummary = new UserSummary();
+        userSummary.setId(user.getId());
+        userSummary.setUsername(user.getUsername());
+        userSummary.setEmail(user.getEmail());
+        userSummary.setVisits(user.getVisits().size());
+        userSummary.setAnswers(user.getAnswers().size());
+        userSummary.setSurveys(user.getSurveys().size());
+
+        return userSummary;
     }
 }
