@@ -4,11 +4,13 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.poolplatform.adapters.dto.ResponseDTO;
+import com.poolplatform.features.user.adapters.mappers.UserMapper;
 import com.poolplatform.features.user.domain.UserService;
 import com.poolplatform.features.user.domain.models.User;
 import com.poolplatform.features.user.domain.models.UserSummary;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
@@ -26,7 +28,7 @@ public class UserController {
 
         ResponseDTO<List<UserSummary>> responseDTO = new ResponseDTO<>();
         responseDTO.setMessage("All users list");
-        responseDTO.setData(users.stream().map(UserSummary::new).toList());
+        responseDTO.setData(users.stream().map(UserMapper::toUserSummary).collect(Collectors.toList()));
 
         return ResponseEntity.ok(responseDTO);
     }
